earlyvet-auth/manifests/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: earlyvet
  labels:
    app: earlyvet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: earlyvet
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: earlyvet
    spec:
      containers:
        - name: earlyvet
          image: bisry/earlyvet
          ports:
            - containerPort: 3000
