earlyvet-auth/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: earlyvet
spec:
  selector:
    app: earlyvet
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
